--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tatto-design",
+  "name": "tattoo-design",
   "private": true,
-  "homepage": "https://sathaniel99.github.io/tattoo-design",
+  "homepage": "https://sathaniel99.github.io/tattoo-design/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -48,7 +48,6 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
-    "gh-pages": "^6.3.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
