--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.3.0",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^12.23.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
